@@ -1,6 +1,9 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.85 2004/09/29 01:32:50 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.86 2004/09/29 06:44:26 zhen Exp $
+
+  29 Sep 2004; John Davis <zhen@gentoo.org> targets/stage2/stage2-chroot.sh:
+  bugfix #60502 - the stage2 target can now resume the bootstrapping process
 
   28 Sep 2004; John Davis <zhen@gentoo.org> TODO,
   +examples/fsscript.sh.example, examples/livecd-stage2_template.spec,
